--- a/public/Index.html
+++ b/public/Index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+     <!-- Navbar Sticky (aparece al hacer scroll) -->
+    <nav class="navbar-sticky">
+        <div class="navbar-content">
+            <div class="navbar-left">
+              <img src="https://media.licdn.com/dms/image/v2/D4E03AQFyTazmSkgkUg/profile-displayphoto-crop_800_800/B4EZnzZjKRKYAI-/0/1760725186593?e=1763596800&v=beta&t=zkFSuJHTGwQ9ugGepWuk3TPI8hSVh3GArYsmNJ-qXXM" alt="profile-picture"class="navbar-avatar">
+                <span class="navbar-name">Angel Reyes</span>
+            </div>
+            <div class="navbar-right">
+                <a href="#about" data-i18n="aboutTitle">About Me</a>
+                <a href="#skills" data-i18n="skillsTitle">Skills</a>
+                <a href="#projects" data-i18n="projectsTitle">Projects</a>
+                <a href="#contact" data-i18n="contactTitle">Contact</a>
+            </div>
+        </div>
+    </nav>
+    
     <div class="language-toggle">
         <button class="lang-btn active" data-lang="en">EN</button>
         <button class="lang-btn" data-lang="es">ES</button>
