--- a/public/Index.html
+++ b/public/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-     <!-- Navbar Sticky (aparece al hacer scroll) -->
+     <!-- Navbar Sticky Element -->
     <nav class="navbar-sticky">
         <div class="navbar-content">
             <div class="navbar-left">
