--- a/public/index.html
+++ b/public/index.html
@@ -55,13 +55,13 @@
             
             <!-- Social Links -->
             <div class="mobile-menu-social">
-                <a href="https://github.com/yourusername" target="_blank">
+                <a href="https://github.com/jhoau"target="_blank">
                     <span>GitHub</span>
                 </a>
-                <a href="https://linkedin.com/in/yourusername" target="_blank">
+                <a href="https://www.linkedin.com/in/angeljreyes/"target="_blank">
                     <span>LinkedIn</span>
                 </a>
-                <a href="mailto:youremail@example.com">
+                <a href="mailto:Jhoaorj@gmail.com" target="_blank">
                     <span>Email</span>
                 </a>
             </div>
