--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
             <a href="#projects" data-i18n="projectsTitle">Projects</a>
             <a href="#contact" data-i18n="contactTitle">Contact</a>
         </div>
+           <div class="language-toggle">
+            <button class="lang-btn active" data-lang="en">EN</button>
+            <button class="lang-btn" data-lang="es">ES</button>
+            </div>
+        </div>
     </div>
 </nav>
 
