--- a/public/index.html
+++ b/public/index.html
@@ -219,6 +219,8 @@
                     <textarea id="mensaje" name="mensaje" required></textarea>
                 </div>
                 <button type="submit" data-i18n="sendButton">Send Message</button>
+
+                 <p id="contact-status" class="contact-status"></p>
             </form>
         </section>
 
