--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar-sticky">
     <div class="navbar-content">
         <div class="navbar-left">
-             <img src="https://media.licdn.com/dms/image/v2/D4E03AQFyTazmSkgkUg/profile-displayphoto-crop_800_800/B4EZnzZjKRKYAI-/0/1760725186593?e=1763596800&v=beta&t=zkFSuJHTGwQ9ugGepWuk3TPI8hSVh3GArYsmNJ-qXXM" alt="Angel Reyes" class="navbar-avatar">
+             <img src = "/images/profile.png" alt="Angel Reyes" class="navbar-avatar">
             <span class="navbar-name">Angel Reyes</span>
         </div>
         
@@ -124,7 +124,7 @@
             <div class ="hero-content">
                 <div class="hero-left">
                     <div class="profile-image">
-                        <img src="https://media.licdn.com/dms/image/v2/D4E03AQFyTazmSkgkUg/profile-displayphoto-crop_800_800/B4EZnzZjKRKYAI-/0/1760725186593?e=1763596800&v=beta&t=zkFSuJHTGwQ9ugGepWuk3TPI8hSVh3GArYsmNJ-qXXM" alt="profile-image"></div>
+                        <img src="/images/profile.png" alt="profile-image"></div>
                     
                 </div>
                 <div class="hero-right">
