--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar-sticky">
     <div class="navbar-content">
         <div class="navbar-left">
-             <img src = "/images/profile.png" alt="Angel Reyes" class="navbar-avatar">
+             <img src = "images/profile.png" alt="Angel Reyes" class="navbar-avatar">
             <span class="navbar-name">Angel Reyes</span>
         </div>
         
@@ -124,7 +124,7 @@
             <div class ="hero-content">
                 <div class="hero-left">
                     <div class="profile-image">
-                        <img src="/images/profile.png" alt="profile-image"></div>
+                        <img src="images/profile.png" alt="profile-image"></div>
                     
                 </div>
                 <div class="hero-right">
